--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,11 @@ jobs:
       # specify the version
       - image: circleci/golang:1.11
 
-    working_directory: /go/src/github.com/digineo/go-dhclient
     steps:
       - checkout
 
-      # specify any bash command here prefixed with `run: `
-      - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      # run tests
+      - run: go test -v -cover -race ./...
+
+      # build binary
       - run: go install github.com/digineo/go-dhclient/cmd/dhclient
